# Setker

./: .gitignore  CMakeLists.txt  README.md  main.cpp
docs/: ARCHITECTURE.md  DEVELOPMENT.md  GRAMMAR.md
src/: main.cpp
src/commands/: Evaluator.cpp  Evaluator.h  Parser.cpp  Parser.h  Run.cpp  Run.h  Tokenizer.cpp  Tokenizer.h
src/def/: ASTNode.cpp  ASTNode.h  Environment.cpp  Environment.h  ErrorCode.h  Keywords.cpp  Keywords.h  Tokens.cpp  Tokens.h
